--- a/src/components/noteContent/noteContent.css
+++ b/src/components/noteContent/noteContent.css
@@ -1,3 +1,6 @@
+.noteContainer {
+  width: 100%;
+}
 .note {
   background: #fdfdfd;
   box-shadow: #999 1px 1px 3px;
@@ -5,7 +8,6 @@
   padding-top: 0;
   min-height: 200px;
   width: 100%;
-
   display: block;
   position: relative;
   overflow: hidden;
